<resources>
    <string name="app_name">WorkingTitle</string>
    <string name="title_activity_dashboard">DashboardActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="dashboard">DASHBOARD</string>
    <string name="new_button">NEW</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="about_title">About</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="stats">Stats</string>
    <string name="stats_fragment">Stats Fragment</string>
    <string name="decks">decks</string>
    <string name="themes">Themes</string>
    <string name="communicate">Communicate</string>
    <string name="decks_nav_drawer">Decks</string>
    <string name="send">Send</string>
    <string name="share">Share</string>
    <string name="stats_nav_drawer">Stats</string>
    <string name="tools">Tools</string>
    <string name="authors">Authors:</string>
    <string name="theme_fragment">Theme Fragment</string>
    <string name="tools_fragment">Tools Fragment</string>
    <string name="back">Back</string>
    <string name="front">Front</string>
    <string name="create">Create</string>
    <string name="choose_a_deck">Choose a deck</string>
    <string name="create_new_deck">Create new deck</string>
    <string name="working_title">Working Title</string>
    <string name="smartify_yo_learning">Smartify yo learning</string>
    <string name="view_all_data">View all data</string>
    <string name="title">Title</string>
    <string name="createDeck">Create</string>
    <string name="create_a_new_deck">Create a new deck</string>
    <string name="create_deck">Create</string>
    <string name="create_a_new_decka">Create a new deck</string>
    <string name="titlea">Title</string>
    <string name="delete_data">Delete Data</string>
    <string name="home">Home</string>
    <string name="about_item">About</string>
    <string name="main_menu">Main menu</string>
    <string name="search">Search</string>
    <string name="textview">TextView</string>
    <string name="numcards">TextView</string>
</resources>
