<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home_button"
        android:onClick="goToMain"
        android:orderInCategory="101"
        android:title="@string/main_menu"
        android:icon="@drawable/ic_home"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_settings"
        android:onClick="goToSettings"
        android:orderInCategory="102"
        android:title="@string/action_settings" />
    <item
        android:orderInCategory="103"
        android:title="@string/search"
        android:icon="@drawable/ic_search"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/about_item"
        android:orderInCategory="104"
        android:title="@string/about_item"
        android:icon="@drawable/ic_info"
        android:onClick="goToAbout"
        />
</menu>
